spacing between sections corrected

--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -16,6 +16,10 @@
       letter-spacing: 0.72px;
       text-transform: capitalize;
       text-align: center;
+
+      @include desktop {
+        padding: 120px 0 72px 0;
+      }
     }
 
   &__list {
@@ -31,6 +35,7 @@
 
     @include desktop {
       max-width: 1158px;
+      padding: 0 20px 120px 20px;
     }
     
   &--item {
