--- a/sass/components/_solutions.scss
+++ b/sass/components/_solutions.scss
@@ -104,7 +104,7 @@
   justify-content: center;
   background: $white;
   padding: 0;
-  margin: 120px 0;
+  margin: 96px 0;
 
   @include tablet {
     display: flex;
@@ -116,6 +116,7 @@
 
   @include desktop {
   width: 100%;
+  margin: 120px 0;
 
   @media screen and (max-width: 1440px) {
     width: 100%;
